// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cash flow read models > expense page 1`] = `
{
  "accounts": [
    {
      "currency": "DZD",
      "currentBalance": 250000,
      "id": "20000000-0000-4000-8000-000000000301",
      "name": "Characterization cash",
    },
    {
      "currency": "EUR",
      "currentBalance": 1200,
      "id": "20000000-0000-4000-8000-000000000302",
      "name": "Characterization euro",
    },
    {
      "currency": "USD",
      "currentBalance": 800,
      "id": "20000000-0000-4000-8000-000000000303",
      "name": "Characterization dollar",
    },
    {
      "currency": "DZD",
      "currentBalance": 90000,
      "id": "20000000-0000-4000-8000-000000000304",
      "name": "Characterization bank",
    },
  ],
  "categories": [
    {
      "id": "20000000-0000-4000-8000-000000000201",
      "name": "Characterization essentials",
      "type": "essentials",
    },
    {
      "id": "20000000-0000-4000-8000-000000000202",
      "name": "Characterization groceries",
      "type": "essentials",
    },
    {
      "id": "20000000-0000-4000-8000-000000000203",
      "name": "Characterization personal",
      "type": "personal",
    },
  ],
  "currentMemberName": "Characterization Owner",
  "defaultDate": "<M+0>-26",
  "recent": [
    {
      "accountName": "Characterization cash",
      "amount": 13500,
      "categoryName": "Characterization groceries",
      "categoryType": "essentials",
      "currency": "DZD",
      "id": "20000000-0000-4000-8000-000000000602",
      "memberName": "Characterization Member",
      "note": "Characterization groceries",
      "transactionDate": "<M+0>-12",
    },
    {
      "accountName": "Characterization cash",
      "amount": 42000,
      "categoryName": "Characterization essentials",
      "categoryType": "essentials",
      "currency": "DZD",
      "id": "20000000-0000-4000-8000-000000000601",
      "memberName": "Characterization Owner",
      "note": "Characterization rent",
      "transactionDate": "<M+0>-05",
    },
    {
      "accountName": null,
      "amount": 60,
      "categoryName": "Characterization personal",
      "categoryType": "personal",
      "currency": "EUR",
      "id": "20000000-0000-4000-8000-000000000603",
      "memberName": "Characterization Owner",
      "note": "Characterization personal",
      "transactionDate": "<M-1>-20",
    },
  ],
  "totals": [
    {
      "amount": 55500,
      "currency": "DZD",
    },
  ],
}
`;

exports[`cash flow read models > income page 1`] = `
{
  "canManageMembers": true,
  "defaultMonth": "<M+0>",
  "hasHouseholdMember": true,
  "memberTotals": [
    {
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "totals": [
        {
          "amount": 400,
          "currency": "EUR",
        },
      ],
    },
    {
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "totals": [
        {
          "amount": 180000,
          "currency": "DZD",
        },
      ],
    },
  ],
  "recent": [
    {
      "amount": 180000,
      "currency": "DZD",
      "id": "20000000-0000-4000-8000-000000000501",
      "memberName": "Characterization Owner",
      "month": "<M+0>-01",
      "note": "Characterization salary",
      "sourceName": "Characterization salary",
    },
    {
      "amount": 400,
      "currency": "EUR",
      "id": "20000000-0000-4000-8000-000000000502",
      "memberName": "Characterization Member",
      "month": "<M+0>-01",
      "note": "Characterization freelance",
      "sourceName": "Characterization freelance",
    },
    {
      "amount": 175000,
      "currency": "DZD",
      "id": "20000000-0000-4000-8000-000000000503",
      "memberName": "Characterization Owner",
      "month": "<M-1>-01",
      "note": "Characterization previous month",
      "sourceName": "Characterization salary",
    },
  ],
  "sources": [
    {
      "available": true,
      "id": "20000000-0000-4000-8000-000000000101",
      "memberName": "Characterization Owner",
      "name": "Characterization salary",
    },
    {
      "available": true,
      "id": "20000000-0000-4000-8000-000000000102",
      "memberName": "Characterization Member",
      "name": "Characterization freelance",
    },
  ],
  "totals": [
    {
      "amount": 180000,
      "currency": "DZD",
    },
    {
      "amount": 400,
      "currency": "EUR",
    },
  ],
}
`;

exports[`cash flow read models > transfers page 1`] = `
{
  "accounts": [
    {
      "currency": "DZD",
      "currentBalance": 250000,
      "id": "20000000-0000-4000-8000-000000000301",
      "name": "Characterization cash",
    },
    {
      "currency": "EUR",
      "currentBalance": 1200,
      "id": "20000000-0000-4000-8000-000000000302",
      "name": "Characterization euro",
    },
    {
      "currency": "USD",
      "currentBalance": 800,
      "id": "20000000-0000-4000-8000-000000000303",
      "name": "Characterization dollar",
    },
    {
      "currency": "DZD",
      "currentBalance": 90000,
      "id": "20000000-0000-4000-8000-000000000304",
      "name": "Characterization bank",
    },
  ],
  "defaultDate": "<M+0>-26",
  "recent": [
    {
      "amount": 15000,
      "currency": "DZD",
      "fromAccountName": "Characterization cash",
      "id": "20000000-0000-4000-8000-000000000701",
      "note": "Characterization transfer",
      "toAccountName": "Characterization bank",
      "transferDate": "<M+0>-10",
    },
  ],
}
`;

exports[`composed read models > dashboard page 1`] = `
{
  "assetAllocation": [
    {
      "amount": 514600,
      "key": "accounts",
      "label": "Accounts",
      "percentage": 61.65827941528876,
    },
    {
      "amount": 320000,
      "key": "assets",
      "label": "Gold & assets",
      "percentage": 38.34172058471124,
    },
  ],
  "currentMonth": "<M+0>",
  "expenseBreakdown": [
    {
      "amount": 55500,
      "key": "essentials",
      "label": "Essentials",
      "percentage": 100,
    },
  ],
  "goals": [
    {
      "currency": "DZD",
      "currentAmount": 50000,
      "id": "20000000-0000-4000-8000-000000000c01",
      "name": "Characterization emergency fund",
      "note": "Characterization goal",
      "priority": 1,
      "progressPercent": 10,
      "remainingAmount": 450000,
      "status": "active",
      "targetAmount": 500000,
      "targetDate": "<M+6>-01",
    },
  ],
  "health": [
    {
      "description": "Income covers recorded spending, saving, and investing.",
      "label": "Cash flow",
      "status": "positive",
      "value": "Positive",
    },
    {
      "description": "Explicit savings and investment events divided by actual income.",
      "label": "Saving rate",
      "status": "neutral",
      "value": "12.6%",
    },
    {
      "description": "Average absolute variance across planned allocation areas.",
      "label": "Plan alignment",
      "status": "negative",
      "value": "78% avg. gap",
    },
    {
      "description": "Change between the two most recent captured month-end values.",
      "label": "Net-worth direction",
      "status": "neutral",
      "value": "Needs 2 snapshots",
    },
  ],
  "income": 238200,
  "incomeTotals": [
    {
      "amount": 180000,
      "currency": "DZD",
    },
    {
      "amount": 400,
      "currency": "EUR",
    },
  ],
  "investmentTotals": [
    {
      "amount": 300,
      "currency": "USD",
    },
  ],
  "investments": 0,
  "liabilitiesValue": 180000,
  "missingRateCurrencies": [
    "USD",
  ],
  "month": "<M+0>",
  "netWorth": null,
  "netWorthSource": "live valuation",
  "nextMonth": "<M+1>",
  "planRows": [
    {
      "actual": 55500,
      "key": "essentials",
      "label": "Essentials",
      "planned": 119100,
    },
    {
      "actual": 0,
      "key": "personal",
      "label": "Personal",
      "planned": 23820,
    },
    {
      "actual": 30000,
      "key": "savings",
      "label": "Savings",
      "planned": 47640,
    },
    {
      "actual": 0,
      "key": "investment",
      "label": "Investments",
      "planned": 35730,
    },
    {
      "actual": 0,
      "key": "reserve",
      "label": "Reserve",
      "planned": 11910,
    },
  ],
  "planVersion": 2,
  "preferences": {
    "defaultMonth": "current",
    "kpiMode": "full",
    "showBreakdowns": true,
    "showGoals": true,
    "showHealth": true,
    "showNetWorth": true,
    "showPlan": true,
    "trendRange": 6,
  },
  "previousMonth": "<M-1>",
  "remaining": 152700,
  "savingRate": 12.594458438287154,
  "savings": 30000,
  "savingsTotals": [
    {
      "amount": 30000,
      "currency": "DZD",
    },
  ],
  "selectedRecordCount": 6,
  "spending": 55500,
  "spendingTotals": [
    {
      "amount": 55500,
      "currency": "DZD",
    },
  ],
  "trends": [
    {
      "income": 0,
      "investments": 0,
      "month": "<M-5>",
      "netWorth": null,
      "savings": 0,
      "spending": 0,
    },
    {
      "income": 0,
      "investments": 0,
      "month": "<M-4>",
      "netWorth": null,
      "savings": 0,
      "spending": 0,
    },
    {
      "income": 0,
      "investments": 0,
      "month": "<M-3>",
      "netWorth": null,
      "savings": 0,
      "spending": 0,
    },
    {
      "income": 0,
      "investments": 0,
      "month": "<M-2>",
      "netWorth": null,
      "savings": 0,
      "spending": 0,
    },
    {
      "income": 175000,
      "investments": 0,
      "month": "<M-1>",
      "netWorth": 564600,
      "savings": 0,
      "spending": 8730,
    },
    {
      "income": 238200,
      "investments": 0,
      "month": "<M+0>",
      "netWorth": null,
      "savings": 30000,
      "spending": 55500,
    },
  ],
}
`;

exports[`composed read models > report activity export 1`] = `
{
  "filters": {
    "activityType": "all",
    "memberId": null,
    "period": "year",
  },
  "rows": [
    {
      "amount": 13500,
      "category": "Essentials",
      "currency": "DZD",
      "date": "<M+0>-12",
      "id": "20000000-0000-4000-8000-000000000602",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization groceries",
      "type": "expense",
    },
    {
      "amount": 300,
      "category": "Investment",
      "currency": "USD",
      "date": "<M+0>-09",
      "id": "20000000-0000-4000-8000-000000000d02",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization investment event",
      "type": "investment",
    },
    {
      "amount": 30000,
      "category": "Savings",
      "currency": "DZD",
      "date": "<M+0>-08",
      "id": "20000000-0000-4000-8000-000000000d01",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization contribution",
      "type": "saving",
    },
    {
      "amount": 42000,
      "category": "Essentials",
      "currency": "DZD",
      "date": "<M+0>-05",
      "id": "20000000-0000-4000-8000-000000000601",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization rent",
      "type": "expense",
    },
    {
      "amount": 400,
      "category": "Income",
      "currency": "EUR",
      "date": "<M+0>-01",
      "id": "20000000-0000-4000-8000-000000000502",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization freelance",
      "type": "income",
    },
    {
      "amount": 180000,
      "category": "Income",
      "currency": "DZD",
      "date": "<M+0>-01",
      "id": "20000000-0000-4000-8000-000000000501",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization salary",
      "type": "income",
    },
    {
      "amount": 60,
      "category": "Personal",
      "currency": "EUR",
      "date": "<M-1>-20",
      "id": "20000000-0000-4000-8000-000000000603",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M-1>",
      "note": "Characterization personal",
      "type": "expense",
    },
    {
      "amount": 175000,
      "category": "Income",
      "currency": "DZD",
      "date": "<M-1>-01",
      "id": "20000000-0000-4000-8000-000000000503",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M-1>",
      "note": "Characterization previous month",
      "type": "income",
    },
  ],
  "selectedMonth": "<M+0>",
  "selectedYear": "2026",
}
`;

exports[`composed read models > reports page 1`] = `
{
  "activityFilters": {
    "activityType": "all",
    "memberId": null,
    "period": "month",
  },
  "activityRows": [
    {
      "amount": 13500,
      "category": "Essentials",
      "currency": "DZD",
      "date": "<M+0>-12",
      "id": "20000000-0000-4000-8000-000000000602",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization groceries",
      "type": "expense",
    },
    {
      "amount": 300,
      "category": "Investment",
      "currency": "USD",
      "date": "<M+0>-09",
      "id": "20000000-0000-4000-8000-000000000d02",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization investment event",
      "type": "investment",
    },
    {
      "amount": 30000,
      "category": "Savings",
      "currency": "DZD",
      "date": "<M+0>-08",
      "id": "20000000-0000-4000-8000-000000000d01",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization contribution",
      "type": "saving",
    },
    {
      "amount": 42000,
      "category": "Essentials",
      "currency": "DZD",
      "date": "<M+0>-05",
      "id": "20000000-0000-4000-8000-000000000601",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization rent",
      "type": "expense",
    },
    {
      "amount": 400,
      "category": "Income",
      "currency": "EUR",
      "date": "<M+0>-01",
      "id": "20000000-0000-4000-8000-000000000502",
      "memberId": "20000000-0000-4000-8000-000000000003",
      "memberName": "Characterization Member",
      "month": "<M+0>",
      "note": "Characterization freelance",
      "type": "income",
    },
    {
      "amount": 180000,
      "category": "Income",
      "currency": "DZD",
      "date": "<M+0>-01",
      "id": "20000000-0000-4000-8000-000000000501",
      "memberId": "20000000-0000-4000-8000-000000000002",
      "memberName": "Characterization Owner",
      "month": "<M+0>",
      "note": "Characterization salary",
      "type": "income",
    },
  ],
  "annualTotals": {
    "expenses": 64230,
    "income": 413200,
    "investments": 0,
    "remaining": 318970,
    "savings": 30000,
  },
  "members": [
    {
      "id": "20000000-0000-4000-8000-000000000003",
      "name": "Characterization Member",
    },
    {
      "id": "20000000-0000-4000-8000-000000000002",
      "name": "Characterization Owner",
    },
  ],
  "missingRateCurrencies": [
    "USD",
  ],
  "months": [
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-7>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-6>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-5>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-4>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-3>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M-2>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 8730,
      "income": 175000,
      "investments": 0,
      "month": "<M-1>",
      "netWorth": 564600,
      "personal": 8730,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 166270,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 1,
        "income": 1,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 55500,
      "expenses": 55500,
      "income": 238200,
      "investments": 0,
      "month": "<M+0>",
      "netWorth": null,
      "personal": 0,
      "planVersion": 2,
      "plannedEssentials": 119100,
      "plannedInvestments": 35730,
      "plannedPersonal": 23820,
      "plannedSavings": 47640,
      "remaining": 152700,
      "savingRate": 12.594458438287154,
      "savings": 30000,
      "sourceCounts": {
        "expenses": 2,
        "income": 2,
        "investments": 1,
        "savings": 1,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M+1>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M+2>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M+3>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
    {
      "essentials": 0,
      "expenses": 0,
      "income": 0,
      "investments": 0,
      "month": "<M+4>",
      "netWorth": null,
      "personal": 0,
      "planVersion": null,
      "plannedEssentials": null,
      "plannedInvestments": null,
      "plannedPersonal": null,
      "plannedSavings": null,
      "remaining": 0,
      "savingRate": 0,
      "savings": 0,
      "sourceCounts": {
        "expenses": 0,
        "income": 0,
        "investments": 0,
        "savings": 0,
      },
    },
  ],
  "selectedMonth": "<M+0>",
  "selectedSummary": {
    "essentials": 55500,
    "expenses": 55500,
    "income": 238200,
    "investments": 0,
    "month": "<M+0>",
    "netWorth": null,
    "personal": 0,
    "planVersion": 2,
    "plannedEssentials": 119100,
    "plannedInvestments": 35730,
    "plannedPersonal": 23820,
    "plannedSavings": 47640,
    "remaining": 152700,
    "savingRate": 12.594458438287154,
    "savings": 30000,
    "sourceCounts": {
      "expenses": 2,
      "income": 2,
      "investments": 1,
      "savings": 1,
    },
  },
  "selectedYear": "2026",
}
`;

exports[`composed read models > settings page 1`] = `
{
  "allocationDefaults": {
    "essentials": 50,
    "investment": 15,
    "personal": 10,
    "reserve": 5,
    "savings": 20,
  },
  "canManage": true,
  "categories": [
    {
      "active": true,
      "id": "20000000-0000-4000-8000-000000000201",
      "name": "Characterization essentials",
      "parentCategoryId": null,
      "sortOrder": 10,
      "type": "essentials",
    },
    {
      "active": true,
      "id": "20000000-0000-4000-8000-000000000202",
      "name": "Characterization groceries",
      "parentCategoryId": "20000000-0000-4000-8000-000000000201",
      "sortOrder": 20,
      "type": "essentials",
    },
    {
      "active": true,
      "id": "20000000-0000-4000-8000-000000000203",
      "name": "Characterization personal",
      "parentCategoryId": null,
      "sortOrder": 30,
      "type": "personal",
    },
  ],
  "currentUserId": "20000000-0000-4000-8000-000000000002",
  "dashboardPreferences": {
    "defaultMonth": "current",
    "kpiMode": "full",
    "showBreakdowns": true,
    "showGoals": true,
    "showHealth": true,
    "showNetWorth": true,
    "showPlan": true,
    "trendRange": 6,
  },
  "defaultDate": "<M+0>-26",
  "exchangeRates": [
    {
      "currency": "EUR",
      "effectiveDate": "<M-1>-01",
      "rate": 145.5,
    },
    {
      "currency": "USD",
      "effectiveDate": null,
      "rate": null,
    },
  ],
  "family": {
    "baseCurrency": "DZD",
    "dateFormat": "dd/MM/yyyy",
    "locale": "en",
    "name": "Phase 2B Characterization Household",
    "timezone": "Africa/Algiers",
  },
  "financialHealth": {
    "debtWarningRatio": 30,
    "essentialsWarningRatio": 60,
    "goalProgressTarget": 75,
    "neutralSavingRate": 10,
    "positiveInvestmentRate": 10,
    "positivePlanVariance": 0.1,
    "positiveSavingRate": 20,
    "warningPlanVariance": 0.25,
  },
  "incomeSources": [
    {
      "active": true,
      "id": "20000000-0000-4000-8000-000000000101",
      "name": "Characterization salary",
      "ownerMemberId": "20000000-0000-4000-8000-000000000002",
      "sortOrder": 10,
    },
    {
      "active": true,
      "id": "20000000-0000-4000-8000-000000000102",
      "name": "Characterization freelance",
      "ownerMemberId": "20000000-0000-4000-8000-000000000003",
      "sortOrder": 20,
    },
  ],
  "inventory": {
    "activeCategories": 3,
    "activeIncomeSources": 2,
    "configuredCategories": 3,
  },
  "members": [
    {
      "active": true,
      "displayName": "Characterization Owner",
      "id": "20000000-0000-4000-8000-000000000002",
      "lastLoginAt": null,
      "mustChangePassword": false,
      "role": "owner",
      "username": "phase2b_owner",
    },
    {
      "active": true,
      "displayName": "Characterization Member",
      "id": "20000000-0000-4000-8000-000000000003",
      "lastLoginAt": null,
      "mustChangePassword": false,
      "role": "member",
      "username": "phase2b_member",
    },
  ],
}
`;

exports[`net worth read models > accounts page 1`] = `
{
  "accounts": [
    {
      "currency": "DZD",
      "currentBalance": 250000,
      "dzdValue": 250000,
      "id": "20000000-0000-4000-8000-000000000301",
      "name": "Characterization cash",
      "type": "cash",
    },
    {
      "currency": "EUR",
      "currentBalance": 1200,
      "dzdValue": 174600,
      "id": "20000000-0000-4000-8000-000000000302",
      "name": "Characterization euro",
      "type": "foreign_currency",
    },
    {
      "currency": "USD",
      "currentBalance": 800,
      "dzdValue": null,
      "id": "20000000-0000-4000-8000-000000000303",
      "name": "Characterization dollar",
      "type": "foreign_currency",
    },
    {
      "currency": "DZD",
      "currentBalance": 90000,
      "dzdValue": 90000,
      "id": "20000000-0000-4000-8000-000000000304",
      "name": "Characterization bank",
      "type": "bank",
    },
  ],
  "defaultDate": "<M+0>-26",
  "exchangeRates": [
    {
      "currency": "EUR",
      "effectiveDate": "<M-1>-01",
      "rate": 145.5,
    },
    {
      "currency": "USD",
      "effectiveDate": null,
      "rate": null,
    },
  ],
  "knownDzdValue": 514600,
  "missingRateCurrencies": [
    "USD",
  ],
}
`;

exports[`net worth read models > assets page 1`] = `
[
  {
    "currency": "DZD",
    "currentValue": 320000,
    "date": "<M-1>-01",
    "id": "20000000-0000-4000-8000-000000000801",
    "name": "Characterization gold",
    "note": "Characterization asset",
    "purchaseValue": 300000,
    "type": "gold",
  },
]
`;

exports[`net worth read models > investments page 1`] = `
{
  "activeOptions": [
    {
      "currency": "USD",
      "id": "20000000-0000-4000-8000-000000000901",
      "name": "Characterization fund",
    },
  ],
  "defaultDate": "<M+0>-26",
  "items": [
    {
      "currency": "USD",
      "currentValue": 1500,
      "date": "<M-1>-05",
      "id": "20000000-0000-4000-8000-000000000901",
      "name": "Characterization fund",
      "note": "Characterization investment",
      "purchaseValue": 1200,
      "type": "fund",
    },
  ],
  "monthTotals": [
    {
      "amount": 300,
      "currency": "USD",
    },
  ],
  "recent": [
    {
      "amount": 300,
      "currency": "USD",
      "id": "20000000-0000-4000-8000-000000000d02",
      "investmentName": "Characterization fund",
      "memberName": "Characterization Member",
      "note": "Characterization investment event",
      "transactionDate": "<M+0>-09",
    },
  ],
}
`;

exports[`net worth read models > liabilities page 1`] = `
[
  {
    "currency": "DZD",
    "dueDate": "<M+6>-01",
    "id": "20000000-0000-4000-8000-000000000a01",
    "monthlyPayment": 12000,
    "name": "Characterization loan",
    "originalAmount": 240000,
    "paidAmount": 60000,
    "status": "active",
    "type": "loan",
  },
]
`;

exports[`net worth read models > net worth page 1`] = `
{
  "accounts": 514600,
  "assets": 320000,
  "complete": false,
  "currentMonth": "<M+0>",
  "currentMonthCaptured": false,
  "currentMonthStart": "<M+0>-01",
  "investments": 0,
  "missingRateCurrencies": [
    "USD",
  ],
  "monthChange": null,
  "netWorth": null,
  "snapshots": [
    {
      "accounts": 424600,
      "assets": 320000,
      "capturedAt": "<timestamp>",
      "id": "20000000-0000-4000-8000-000000000f01",
      "investments": 0,
      "liabilities": 180000,
      "month": "<M-1>",
      "netWorth": 564600,
      "rates": {
        "DZD": 1,
        "EUR": 145.5,
      },
      "totalAssets": 744600,
      "totalLiabilities": 180000,
    },
  ],
  "totalAssets": 834600,
  "totalLiabilities": 180000,
}
`;

exports[`planning read models > monthly plan page 1`] = `
{
  "currentVersion": {
    "allocation": {
      "essentials": 50,
      "investment": 15,
      "personal": 10,
      "reserve": 5,
      "savings": 20,
    },
    "createdAt": "<timestamp>",
    "createdBy": "Characterization Owner",
    "id": "20000000-0000-4000-8000-000000000e12",
    "reason": "Characterization corrected revision",
    "versionNumber": 2,
  },
  "defaultAllocation": {
    "essentials": 50,
    "investment": 15,
    "personal": 10,
    "reserve": 5,
    "savings": 20,
  },
  "familyIncomeDzd": 238200,
  "incomeTotals": [
    {
      "amount": 180000,
      "currency": "DZD",
    },
    {
      "amount": 400,
      "currency": "EUR",
    },
  ],
  "missingRateCurrencies": [],
  "plannedAmounts": {
    "essentials": 119100,
    "investment": 35730,
    "personal": 23820,
    "reserve": 11910,
    "savings": 47640,
  },
  "plans": [
    {
      "currentVersionId": "20000000-0000-4000-8000-000000000e12",
      "id": "20000000-0000-4000-8000-000000000e01",
      "month": "<M+0>",
      "status": "active",
      "versions": [
        {
          "allocation": {
            "essentials": 50,
            "investment": 15,
            "personal": 10,
            "reserve": 5,
            "savings": 20,
          },
          "createdAt": "<timestamp>",
          "createdBy": "Characterization Owner",
          "id": "20000000-0000-4000-8000-000000000e12",
          "reason": "Characterization corrected revision",
          "versionNumber": 2,
        },
        {
          "allocation": {
            "essentials": 55,
            "investment": 15,
            "personal": 10,
            "reserve": 5,
            "savings": 15,
          },
          "createdAt": "<timestamp>",
          "createdBy": "Characterization Owner",
          "id": "20000000-0000-4000-8000-000000000e11",
          "reason": "Characterization baseline revision",
          "versionNumber": 1,
        },
      ],
    },
  ],
  "selectedMonth": "<M+0>",
  "selectedPlan": {
    "currentVersionId": "20000000-0000-4000-8000-000000000e12",
    "id": "20000000-0000-4000-8000-000000000e01",
    "month": "<M+0>",
    "status": "active",
    "versions": [
      {
        "allocation": {
          "essentials": 50,
          "investment": 15,
          "personal": 10,
          "reserve": 5,
          "savings": 20,
        },
        "createdAt": "<timestamp>",
        "createdBy": "Characterization Owner",
        "id": "20000000-0000-4000-8000-000000000e12",
        "reason": "Characterization corrected revision",
        "versionNumber": 2,
      },
      {
        "allocation": {
          "essentials": 55,
          "investment": 15,
          "personal": 10,
          "reserve": 5,
          "savings": 15,
        },
        "createdAt": "<timestamp>",
        "createdBy": "Characterization Owner",
        "id": "20000000-0000-4000-8000-000000000e11",
        "reason": "Characterization baseline revision",
        "versionNumber": 1,
      },
    ],
  },
}
`;

exports[`planning read models > recurring page 1`] = `
{
  "categories": [
    {
      "id": "20000000-0000-4000-8000-000000000201",
      "name": "Characterization essentials",
      "type": "essentials",
    },
    {
      "id": "20000000-0000-4000-8000-000000000202",
      "name": "Characterization groceries",
      "type": "essentials",
    },
    {
      "id": "20000000-0000-4000-8000-000000000203",
      "name": "Characterization personal",
      "type": "personal",
    },
  ],
  "defaultDate": "<M+0>-26",
  "items": [
    {
      "amount": 9000,
      "categoryName": "Characterization essentials",
      "currency": "DZD",
      "customIntervalDays": null,
      "frequency": "monthly",
      "id": "20000000-0000-4000-8000-000000000b01",
      "name": "Characterization subscription",
      "nextDueDate": "<M+0>-25",
      "type": "expense",
    },
  ],
}
`;

exports[`planning read models > savings goals page 1`] = `
{
  "activeGoals": [
    {
      "currency": "DZD",
      "currentAmount": 50000,
      "id": "20000000-0000-4000-8000-000000000c01",
      "name": "Characterization emergency fund",
      "note": "Characterization goal",
      "priority": 1,
      "progressPercent": 10,
      "remainingAmount": 450000,
      "status": "active",
      "targetAmount": 500000,
      "targetDate": "<M+6>-01",
    },
  ],
  "allTimeTotals": [
    {
      "amount": 30000,
      "currency": "DZD",
    },
  ],
  "defaultDate": "<M+0>-26",
  "goalProgressTotals": [
    {
      "amount": 50000,
      "currency": "DZD",
    },
  ],
  "goals": [
    {
      "currency": "DZD",
      "currentAmount": 50000,
      "id": "20000000-0000-4000-8000-000000000c01",
      "name": "Characterization emergency fund",
      "note": "Characterization goal",
      "priority": 1,
      "progressPercent": 10,
      "remainingAmount": 450000,
      "status": "active",
      "targetAmount": 500000,
      "targetDate": "<M+6>-01",
    },
  ],
  "monthTotals": [
    {
      "amount": 30000,
      "currency": "DZD",
    },
  ],
  "recent": [
    {
      "amount": 30000,
      "currency": "DZD",
      "goalName": "Characterization emergency fund",
      "id": "20000000-0000-4000-8000-000000000d01",
      "memberName": "Characterization Owner",
      "note": "Characterization contribution",
      "transactionDate": "<M+0>-08",
    },
  ],
}
`;
